# kvwc

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  test_wide_column_db.py  wide_column_db.py
.github/workflows/: ci.yml  publish.yml  security_scan.yml
src/: __init__.py  db_manager.py  key_codec.py  length_prefixed_key_codec.py  logging_config.py  serializer.py  wide_column_db.py
tests/: test_key_codecs.py  test_wide_column_db.py
tests/test_db_temp_wide_column_main/close_test_db_instance/: IDENTITY  LOG
