[project]
name = "kvwc"
version = "0.1.0"
description = "A key-value wide-column data store using RocksDB, supporting versioning and datasets."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "dzlab", email = "dzlabs@outlook.com" }]
keywords = [
    "rocksdb",
    "key-value",
    "wide-column",
    "database",
    "versioning",
    "nosql",
]
classifiers = [
    "Development Status :: 3 - Alpha",                              # Or Beta, Production/Stable as appropriate
    "Intended Audience :: Developers",                              # Match the license above
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",                           # If truly OS independent, otherwise specify
]
dependencies = ["msgpack-python>=0.5.6", "rocksdict"]

[project.urls]
Homepage = "https://github.com/dzlab/kvwc"
Repository = "https://github.com/dzlab/kvwc"
BugTracker = "https://github.com/dzlab/kvwc/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.10"
# Optional: Specify the path to the source code
# include = ["src"]

# Optional: Exclude files or directories from type checking
# exclude = ["tests"]

# Optional: Enable strict type checking
# strict = false
